--- a/content/preferences.html
+++ b/content/preferences.html
@@ -254,23 +254,24 @@
 	</div>
 </div>
 <!-- StoredPrefs -->
-<div class="module button-module" x-on="main">
+<div class="module" x-on="main">
 	<h3 id="pref-stored-title" data-text="foxtrick.prefs.captionCleanupBranch"></h3>
 	<table>
 		<tr>
+			<td colspan="2"><button id="pref-stored-restore" data-text="button.restoreDefault"></button></td>
 			<td><label id="pref-stored-restore-label" data-text="foxtrick.prefs.labelCleanupBranch"></label></td>
-			<td></td>
-			<td><button id="pref-stored-restore" data-text="button.restoreDefault"></button></td>
 		</tr>
 		<tr>
-			<td><label id="pref-delete-token-label" data-text="foxtrick.prefs.labelDeleteToken"></label></td>
-			<td><select id="select-delete-token-teamids"></select></td>
 			<td><button id="pref-delete-token" data-text="button.deleteToken"></button></td>
+			<td><select id="select-delete-token-teamids"></select></td>
+			<td>
+				<label id="pref-delete-token-label" data-text="foxtrick.prefs.oauth.delete"></label>
+				<p id="pref-delete-token-desc" data-text="foxtrick.prefs.oauth.delete.desc"></p>
+			</td>
 		</tr>
 		<tr>
+			<td colspan="2"><button id="pref-stored-disable" data-text="button.disableAll"></button></td>
 			<td><label id="pref-stored-disable-label" data-text="foxtrick.prefs.labelDisableAll"></label></td>
-			<td></td>
-			<td><button id="pref-stored-disable" data-text="button.disableAll"></button></td>
 		</tr>
 	</table>
 </div>
