--- a/content/background.html
+++ b/content/background.html
@@ -161,6 +161,7 @@
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-result-filters.js" ></script>
 
 	<script type="application/x-javascript" src="./entry.js"></script>
+	<script type="application/x-javascript" src="./ui.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
 <body>
