htdateformat: selectbox in preferences to prevent users using uppercase and clearifying available options
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7561 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -302,7 +302,7 @@
 		</tr>
 		<tr>
 			<td><label id="pref-read-date-format-label" for="pref-read-date-format" data-text="foxtrick.prefs.captionHTDateformat"></label></td>
-			<td><input id="pref-read-date-format" pref="htDateFormat" blocked-by="pref-read-ht-prefs"></input></td>
+			<td><select id="pref-read-date-format" pref="htDateFormat" blocked-by="pref-read-ht-prefs"></select></td>
 		</tr>
 	</table>
 </div>
