Make ReadHtPrefs core module and country/locale/date-format settings read-only.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7580 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -206,6 +206,25 @@
 <!-- pane for showing modules, modules have attribute x-on which is a list
  of under which tabs it should be shown -->
 <div id="pane">
+<!-- Set-up -->
+<div class="module" x-on="main">
+	<h3 id="pref-setup" data-text="foxtrick.prefs.setup"></h3>
+	<p id="pref-setup-desc"></p>
+	<table>
+		<tr>
+			<td><label id="pref-setup-language-label" for="pref-setup-language" data-text="foxtrick.prefs.captionHTLanguage"></label></td>
+			<td><input id="pref-setup-language" pref="htLanguage" disabled="disabled"></input></td>
+		</tr>
+		<tr>
+			<td><label id="pref-setup-country-label" for="pref-setup-country" data-text="foxtrick.prefs.captionHTCountry"></label></td>
+			<td><input id="pref-setup-country" pref="htCountry" disabled="disabled"></input></td>
+		</tr>
+		<tr>
+			<td><label id="pref-setup-date-format-label" for="pref-setup-date-format" data-text="foxtrick.prefs.captionHTDateformat"></label></td>
+			<td><input id="pref-setup-date-format" pref="htDateFormat" disabled="disabled"></input></td>
+		</tr>
+	</table>
+</div>
 <!-- additional -->
 <div class="module" x-on="main">
 	<h3 id="pref-additional-title" data-text="foxtrick.prefs.AdditionalOptions"></h3>
@@ -285,26 +304,6 @@
 		<p><textarea id="pref-load-text"></textarea></p>
 		<p><button id="pref-load-do" data-text="button.import"></button></p>
 	</div>
-</div>
-<!-- ReadHtPrefs -->
-<div class="module" x-on="main">
-	<h3 id="pref-read-ht-prefs-title" data-text="foxtrick.prefs.basicPreferences"></h3>
-	<input type="checkbox" id="pref-read-ht-prefs" module="ReadHtPrefs" />
-	<label id="pref-read-ht-prefs-label" for="pref-read-ht-prefs" data-text="foxtrick.ReadHtPrefs.desc"></label>
-	<table>
-		<tr>
-			<td><label id="pref-read-language-label" for="pref-read-language" data-text="foxtrick.prefs.captionHTLanguage"></label></td>
-			<td><select id="pref-read-language" pref="htLanguage" blocked-by="pref-read-ht-prefs"></select></td>
-		</tr>
-		<tr>
-			<td><label id="pref-read-country-label" for="pref-read-country" data-text="foxtrick.prefs.captionHTCountry"></label></td>
-			<td><select id="pref-read-country" pref="htCountry" blocked-by="pref-read-ht-prefs"></select></td>
-		</tr>
-		<tr>
-			<td><label id="pref-read-date-format-label" for="pref-read-date-format" data-text="foxtrick.prefs.captionHTDateformat"></label></td>
-			<td><select id="pref-read-date-format" pref="htDateFormat" blocked-by="pref-read-ht-prefs"></select></td>
-		</tr>
-	</table>
 </div>
 
 <!-- changes -->
