Change text keys for setup entries.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7581 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -212,15 +212,15 @@
 	<p id="pref-setup-desc"></p>
 	<table>
 		<tr>
-			<td><label id="pref-setup-language-label" for="pref-setup-language" data-text="foxtrick.prefs.captionHTLanguage"></label></td>
-			<td><input id="pref-setup-language" pref="htLanguage" disabled="disabled"></input></td>
+			<td><label id="pref-setup-locale-label" for="pref-setup-locale" data-text="foxtrick.prefs.setup.locale"></label></td>
+			<td><input id="pref-setup-locale" pref="htLanguage" disabled="disabled"></input></td>
 		</tr>
 		<tr>
-			<td><label id="pref-setup-country-label" for="pref-setup-country" data-text="foxtrick.prefs.captionHTCountry"></label></td>
+			<td><label id="pref-setup-country-label" for="pref-setup-country" data-text="foxtrick.prefs.setup.country"></label></td>
 			<td><input id="pref-setup-country" pref="htCountry" disabled="disabled"></input></td>
 		</tr>
 		<tr>
-			<td><label id="pref-setup-date-format-label" for="pref-setup-date-format" data-text="foxtrick.prefs.captionHTDateformat"></label></td>
+			<td><label id="pref-setup-date-format-label" for="pref-setup-date-format" data-text="foxtrick.prefs.setup.dateFormat"></label></td>
 			<td><input id="pref-setup-date-format" pref="htDateFormat" disabled="disabled"></input></td>
 		</tr>
 	</table>
