--- a/content/background.html
+++ b/content/background.html
@@ -113,6 +113,7 @@
 	<script type="application/x-javascript" src="./matches/match-player-colouring.js"></script>
 	<script type="application/x-javascript" src="./matches/match-report-format.js"></script>
 	<script type="application/x-javascript" src="./matches/ratings.js"></script>
+	<script type="application/x-javascript" src="./matches/match-order.js"></script>
 	<script type="application/x-javascript" src="./matches/stars-counter.js"></script>
 	<script type="application/x-javascript" src="./presentation/background-fixed.js"></script>
 	<script type="application/x-javascript" src="./presentation/bookmark-adjust.js"></script>
