--- a/content/preferences.html
+++ b/content/preferences.html
@@ -90,6 +90,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/skill-table.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/team-stats.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/transfer-deadline.js" ></script>
+	<script type="application/x-javascript" src="./information-aggregation/table-of-statistical-truth.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/youth-promotes.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/youth-series-estimation.js" ></script>
 	<script type="application/x-javascript" src="./information-aggregation/supporterstats-enhancements.js" ></script>
