--- a/content/preferences.html
+++ b/content/preferences.html
@@ -121,6 +121,7 @@
 	<script type="application/x-javascript" src="./matches/match-income.js" ></script>
 	<script type="application/x-javascript" src="./matches/match-player-colouring.js" ></script>
 	<script type="application/x-javascript" src="./matches/match-report-format.js" ></script>
+	<script type="application/x-javascript" src="./matches/match-simulator.js"></script>
 	<script type="application/x-javascript" src="./matches/ratings.js" ></script>
 	<script type="application/x-javascript" src="./matches/match-order.js" ></script>
 	<script type="application/x-javascript" src="./matches/stars-counter.js" ></script>
