Fixed #854: To top in preferences broken (javascript:scroll(0,0);) Javascript is mandatory for foxtrick anyway.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7824 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -403,7 +403,7 @@
 <div id="fixed">
 	<div id="balloon">
 		<button id="save" data-text="button.save"></button>
-		<a id="top" data-text="button.top" href="#title"></a>
+		<a id="top" data-text="button.top" href="javascript:void(0)" onclick="javascript:scroll(0,0);"></a>
 	</div>
 	<div id="note">
 		<p id="note-content"></p>
