--- a/content/background.html
+++ b/content/background.html
@@ -45,6 +45,7 @@
 	<script type="application/x-javascript" src="./alert/ticker-alert.js"></script>
 	<script type="application/x-javascript" src="./alert/ticker-coloring.js"></script>
 	<script type="application/x-javascript" src="./forum/add-leave-conf-button.js"></script>
+	<script type="application/x-javascript" src="./forum/embed-media.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-change-posts.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-change-posts-modules.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-last-post.js"></script>
