--- a/content/preferences.html
+++ b/content/preferences.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" type="image/png" href="./resources/img/icon-32.png" />
 	<link rel="stylesheet" type="text/css" media="screen" href="./resources/css/preferences.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="./resources/css/modal.css" />
 
 	<!-- essential stuffs -->
 	<script type="application/x-javascript" src="./env.js"></script>
@@ -34,7 +35,8 @@
 	<script type="application/x-javascript" src="./util/session-store.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
-
+	<script type="application/x-javascript" src="./util/modal.js"></script>
+	
 	<!-- external libraries -->
 	<script type="application/x-javascript" src="./lib/jquery.js"></script>
 	<script type="application/x-javascript" src="./lib/oauth.js"></script>
@@ -411,5 +413,6 @@
 		<p id="dismiss-notice" data-text="foxtrick.prefs.dismissNotice"></p>
 	</div>
 </div>
+
 </body>
 </html>
