Moving html.js to dom.js.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7993 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -18,7 +18,7 @@
 	<script type="application/x-javascript" src="./util/array.js"></script>
 	<script type="application/x-javascript" src="./util/copy-button.js"></script>
 	<script type="application/x-javascript" src="./util/currency.js"></script>
-	<script type="application/x-javascript" src="./util/html.js"></script>
+	<script type="application/x-javascript" src="./util/dom.js"></script>
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
 	<script type="application/x-javascript" src="./util/id.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
