foxrick.get: sandboxed fixed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8002 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -192,6 +192,7 @@
 <ul id="view-by" class="nav">
 	<li id="view-by-category"><a data-text="prefs.view.by.category"></a></li>
 	<li id="view-by-page"><a data-text="prefs.view.by.page"></a></li>
+	<li id="view-by-new"><a data-text="prefs.view.by.new"></a></li>
 </ul>
 
 <!-- tabs for each category -->
