preferences: added revokePermissions (main purpose for now is testing setting permissions)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8056 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -285,6 +285,10 @@
 			<td colspan="2"><button id="pref-stored-disable" data-text="button.disableAll"></button></td>
 			<td><label id="pref-stored-disable-label" data-text="foxtrick.prefs.labelDisableAll"></label></td>
 		</tr>
+		<tr>
+			<td colspan="2"><button id="pref-revoke-permissions" data-text="button.revokePermissions"></button></td>
+			<td><label id="pref-revoke-permissions-label" data-text="foxtrick.prefs.labelRevokePermissions"></label></td>
+		</tr>
 	</table>
 </div>
 <!-- LoadSavePrefs -->
