--- a/content/preferences.html
+++ b/content/preferences.html
@@ -359,7 +359,8 @@
 		<li>Copyright &copy; 2009&ndash;2011, ljushaff</li>
 		<li>Copyright &copy; 2009&ndash;2011, Ryan Li &lt;ryan@ryanium.com&gt;</li>
 		<li>Copyright &copy; 2010, Aimo_Kanuuna &lt;misa.kankare@live.fi&gt;</li>
-	</ul>
+		<li>Copyright &copy; 2011, CatzHoek &lt;greyhound_@gmx.ne&gt;</li>
+		</ul>
 	<p>This program is free software: you can redistribute it and/or modify
 		it under the terms of the GNU General Public License as published by
 	    the Free Software Foundation, either version 3 of the License, or
