export prefs: added OAuth option fixing i875
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8194 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -304,6 +304,10 @@
 				<input type="checkbox" id="pref-save-data" pref="SavePrefs_Notes" />
 				<label id="pref-save-data-label" for="pref-save-data" data-text="foxtrick.prefs.labelSavePrefs_Notes"></label>
 			</li>
+			<li>
+				<input type="checkbox" id="pref-save-token" pref="SavePrefs_Token" />
+				<label id="pref-save-token-label" for="pref-save-token" data-text="foxtrick.prefs.labelSavePrefs_Token"></label>
+			</li>
 		</ul>
 		<p><button id="pref-save-do" data-text="button.export"></button></p>
 		<p><textarea id="pref-save-text"></textarea></p>
