fixed missing category renaming in r8239
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8261 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -199,8 +199,8 @@
 <li id="tab-main"><a data-text="tab.main"></a></li><!--
 --><li id="tab-on_page"><a data-text="tab.on_page"></a></li><!--
 --><li id="tab-universal"><a data-text="tab.universal"></a></li><!--
---><li id="tab-information_aggregation"><a data-text="tab.informationAggregation"></a></li><!--
---><li id="tab-shortcuts_and_tweaks"><a data-text="tab.shortcutsAndTweaks"></a></li><!--
+--><li id="tab-informationAggregation"><a data-text="tab.informationAggregation"></a></li><!--
+--><li id="tab-shortcutsAndTweaks"><a data-text="tab.shortcutsAndTweaks"></a></li><!--
 --><li id="tab-presentation"><a data-text="tab.presentation"></a></li><!--
 --><li id="tab-matches"><a data-text="tab.matches"></a></li><!--
 --><li id="tab-forum"><a data-text="tab.forum"></a></li><!--
