--- a/content/preferences.html
+++ b/content/preferences.html
@@ -338,7 +338,7 @@
 		<li>Copyright &copy; 2008&ndash;2009, Mod-PaV</li>
 		<li>Copyright &copy; 2008&ndash;2009, Lars Wortel &lt;larsw84@hotmail.com&gt;</li>
 		<li>Copyright &copy; 2008&ndash;2011, Mod-spambot &lt;daBux@gmx.de&gt;</li>
-		<li>Copyright &copy; 2008&ndash;2011, convincedd &lt;convincedd@googlemail.com&gt;</li>
+		<li>Copyright &copy; 2008&ndash;2012, convincedd &lt;convincedd@googlemail.com&gt;</li>
 		<li>Copyright &copy; 2008&ndash;2011, taised &lt;tiziano.m@gmail.com&gt;</li>
 		<li>Copyright &copy; 2008&ndash;2009, bummerland</li>
 		<li>Copyright &copy; 2008&ndash;2010, Jestar</li>
@@ -346,9 +346,10 @@
 		<li>Copyright &copy; 2008&ndash;2009, OBarros</li>
 		<li>Copyright &copy; 2008&ndash;2009, stephan57</li>
 		<li>Copyright &copy; 2009, baumanns</li>
-		<li>Copyright &copy; 2009&ndash;2011, ljushaff</li>
-		<li>Copyright &copy; 2009&ndash;2011, Ryan Li &lt;ryan@ryanium.com&gt;</li>
+		<li>Copyright &copy; 2009&ndash;2012, ljushaff</li>
+		<li>Copyright &copy; 2009&ndash;2012, Ryan Li &lt;ryan@ryanium.com&gt;</li>
 		<li>Copyright &copy; 2010, Aimo_Kanuuna &lt;misa.kankare@live.fi&gt;</li>
+		<li>Copyright &copy; 2011&ndash;2012, CatzHoek &lt;greyhound_@gmx.de&gt;</li>
 	</ul>
 	<p>This program is free software: you can redistribute it and/or modify
 		it under the terms of the GNU General Public License as published by
