--- a/content/preferences.html
+++ b/content/preferences.html
@@ -39,6 +39,7 @@
 	<script type="application/x-javascript" src="./lib/jquery.js"></script>
 	<script type="application/x-javascript" src="./lib/oauth.js"></script>
 	<script type="application/x-javascript" src="./lib/sha1.js"></script>
+	<script type="application/x-javascript" src="./lib/PluralForm.js"></script>
 
 	<!-- core modules -->
 	<script type="application/x-javascript" src="./redirections.js"></script>
