--- a/content/background.html
+++ b/content/background.html
@@ -29,6 +29,7 @@
 	<script type="application/x-javascript" src="./util/module.js"></script>
 	<script type="application/x-javascript" src="./util/note.js"></script>
 	<script type="application/x-javascript" src="./util/notify.js"></script>
+	<script type="application/x-javascript" src="./util/sanitize.js"></script>
 	<script type="application/x-javascript" src="./util/session-store.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
