--- a/content/background.html
+++ b/content/background.html
@@ -170,7 +170,8 @@
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/team-popup-links.js"></script>
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-filters.js"></script>
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/transfer-search-result-filters.js"></script>
-
+	<!-- end categorized modules -->
+	
 	<script type="application/x-javascript" src="./entry.js"></script>
 	<script type="application/x-javascript" src="./background.js"></script>
 </head>
