New Module: safe-for-work.js Custom title and favicon for hattrick tabs, customizable.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8984 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -140,6 +140,7 @@
 	<script type="application/x-javascript" src="./presentation/local-time.js"></script>
 	<script type="application/x-javascript" src="./presentation/loyalty-display.js"></script>
 	<script type="application/x-javascript" src="./presentation/match-tables.js"></script>
+	<script type="application/x-javascript" src="./presentation/mobile-enhancements.js"></script>
 	<script type="application/x-javascript" src="./presentation/move-manager-online.js"></script>
 	<script type="application/x-javascript" src="./presentation/move-player-select-box.js"></script>
 	<script type="application/x-javascript" src="./presentation/move-player-statement.js"></script>
@@ -147,6 +148,7 @@
 	<script type="application/x-javascript" src="./presentation/original-face.js"></script>
 	<script type="application/x-javascript" src="./presentation/personality-images.js"></script>
 	<script type="application/x-javascript" src="./presentation/ratings-display.js"></script>
+	<script type="application/x-javascript" src="./presentation/safe-for-work.js"></script>
 	<script type="application/x-javascript" src="./presentation/simple-presentation.js"></script>
 	<script type="application/x-javascript" src="./presentation/skill-coloring.js"></script>
 	<script type="application/x-javascript" src="./presentation/skill-translation.js"></script>
