optional Anstoss2 icons
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8996 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -251,6 +251,10 @@
 			<label id="pref-header-icon-label" for="pref-header-icon" data-text="foxtrick.prefs.smallcopyicons"></label>
 		</li>
 		<li>
+			<input type="checkbox" id="pref-anstoss2-icons" pref="anstoss2icons" />
+			<label id="pref-anstoss2-icons-label" for="pref-anstoss2-icons" data-text="foxtrick.prefs.anstoss2icons"></label>
+		</li>
+		<li>
 			<input type="checkbox" id="pref-debug-info" pref="DisplayHTMLDebugOutput" />
 			<label id="pref-debug-info-label" for="pref-debug-info" data-text="foxtrick.prefs.DisplayHTMLDebugOutput"></label>
 		</li>
