toolbar popups for ft and chrome with highlight
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9009 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -255,6 +255,10 @@
 			<label id="pref-anstoss2-icons-label" for="pref-anstoss2-icons" data-text="foxtrick.prefs.anstoss2icons"></label>
 		</li>
 		<li>
+			<input type="checkbox" id="pref-feature-highlight" pref="featureHighlight" />
+			<label id="pref-feature-highlight-label" for="pref-feature-highlight" data-text="foxtrick.prefs.featureHighlight"></label>
+		</li>
+		<li>
 			<input type="checkbox" id="pref-debug-info" pref="DisplayHTMLDebugOutput" />
 			<label id="pref-debug-info-label" for="pref-debug-info" data-text="foxtrick.prefs.DisplayHTMLDebugOutput"></label>
 		</li>
