toolbar popup-opera added. version-info highlight toogle kicked. popup options inline
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9010 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/popup-chrome.html
+++ b/content/popup-chrome.html
@@ -78,7 +78,7 @@ function toggleHighlight()
 </div>
 <div id="wrapperSpacerBottom" class="wrapperSpacer" style="display: block; "><hr></div>
 <div id="bottomLinks">
-	<a id="foxtrick-toolbar-options-label" href="#" onclick="chrome.tabs.create({'url': chrome.extension.getURL('content/preferences.html')}); window.close();">Options</a>
+	<a id="foxtrick-toolbar-options-label" href="/content/preferences.html?width=600">Options</a>
 	<a id="foxtrick-toolbar-homepage-label" href="#" onclick="chrome.tabs.create({'url': 'http://code.google.com/p/foxtrick/'}); window.close();" style="padding-left:3px">Home</a>
 </div>
 </body>
