spec icons form fatcow
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9025 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -378,6 +378,7 @@
 		<li>Copyright &copy; 2010, Aimo_Kanuuna &lt;misa.kankare@live.fi&gt;</li>
 		<li>Copyright &copy; 2011&ndash;2012, CatzHoek &lt;greyhound_@gmx.de&gt;</li>
 		</ul>
+	</br/>
 	<p>This program is free software: you can redistribute it and/or modify
 		it under the terms of the GNU General Public License as published by
 	    the Free Software Foundation, either version 3 of the License, or
@@ -387,18 +388,20 @@
 		but WITHOUT ANY WARRANTY; without even the implied warranty of
 		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 		GNU General Public License for more details.</p>
-
+	<br/>
 	<p>We are also very greatful to the following projects which we
 		have used in both source code and distribution:</p>
 	<ul>
-		<li>An OAuth library by Netflix, Inc., under Apache License,
+		<li>● An OAuth library by Netflix, Inc., under Apache License,
 			version 2.0.</li>
-		<li>A JavaScript implementation of the SHA-1 algorithm by
+		<li>● A JavaScript implementation of the SHA-1 algorithm by
 			Paul Johnston, et al., under BSD License.</li>
-		<li>Modified Chrome to Safari port by Michael Gundlach
+		<li>● Modified Chrome to Safari port by Michael Gundlach
 		under GPLv3 as part of adblockforchrome.googlecode.com</li>
+		<li>● Some icons from <a href="http://www.fatcow.com/free-icons">fatcow</a> 
+			under Creative Commons Attribution 3.0 License</li>
 	</ul>
-
+	<br/>
 	<p>Read <a href="http://www.gnu.org/licenses/gpl.html">GNU General
 		Public License in full text</a>.
 		A copy of GNU General Public License is also available at the
