added option show translationKeys
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9050 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -259,6 +259,10 @@
 			<label id="pref-feature-highlight-label" for="pref-feature-highlight" data-text="prefs.additional.featureHighlight"></label>
 		</li>
 		<li>
+			<input type="checkbox" id="pref-translation-keys" pref="translationKeys" />
+			<label id="pref-translation-keys-label" for="pref-translation-keys" data-text="prefs.additional.translationKeys"></label>
+		</li>
+		<li>
 			<input type="checkbox" id="pref-debug-info" pref="DisplayHTMLDebugOutput" />
 			<label id="pref-debug-info-label" for="pref-debug-info" data-text="prefs.additional.HTMLDebugLog"></label>
 		</li>
