--- a/content/popup-chrome.html
+++ b/content/popup-chrome.html
@@ -42,9 +42,11 @@ function init()
 {
 	var BackgroundPage = chrome.extension.getBackgroundPage();
 	document.getElementById("foxtrick-toolbar-deactivate").checked = BackgroundPage.FoxtrickPrefs.getBool("disableTemporary");
-	document.getElementById("foxtrick-toolbar-deactivate-label").textContent = BackgroundPage.Foxtrickl10n.getString("prefs.disable.temporary");
+	document.getElementById("foxtrick-toolbar-deactivate-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.disableTemporary");
 	document.getElementById("foxtrick-toolbar-highlight").checked = BackgroundPage.FoxtrickPrefs.getBool("featureHighlight");
-	document.getElementById("foxtrick-toolbar-highlight-label").textContent = BackgroundPage.Foxtrickl10n.getString("prefs.additional.featureHighlight");
+	document.getElementById("foxtrick-toolbar-highlight-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.featureHighlight");
+	document.getElementById("foxtrick-toolbar-translationKeys").checked = BackgroundPage.FoxtrickPrefs.getBool("translationKeys");
+	document.getElementById("foxtrick-toolbar-translationKeys-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.translationKeys");
 	document.getElementById("foxtrick-toolbar-options-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.preferences");
 	document.getElementById("foxtrick-toolbar-homepage-label").textContent = BackgroundPage.Foxtrickl10n.getString("link.homepage");
 }
@@ -64,6 +66,15 @@ function toggleHighlight()
 	BackgroundPage.FoxtrickPrefs.setBool("featureHighlight",checked);
 	window.close();
 }
+
+function toggleTranslationKeys()
+{
+	var checked = document.getElementById("foxtrick-toolbar-translationKeys").checked;
+	var BackgroundPage = chrome.extension.getBackgroundPage();
+	BackgroundPage.FoxtrickPrefs.setBool("translationKeys",checked);
+	window.close();
+}
+
 </script>
 </head>
 
@@ -75,6 +86,10 @@ function toggleHighlight()
 <div id="highlightCheckboxAndLabel" style="display: block; ">
 	<input id="foxtrick-toolbar-highlight" type="checkbox" checked="" onclick="toggleHighlight()">
 	<label id="foxtrick-toolbar-highlight-label" for="enabled">Highlight features</label>
+</div>
+<div id="translationKeysCheckboxAndLabel" style="display: block; ">
+	<input id="foxtrick-toolbar-translationKeys" type="checkbox" checked="" onclick="toggleTranslationKeys()">
+	<label id="foxtrick-toolbar-translationKeys-label" for="enabled">Show translation keys</label>
 </div>
 <div id="wrapperSpacerBottom" class="wrapperSpacer" style="display: block; "><hr></div>
 <div id="bottomLinks">
