preferences.html: add links to main tab prefs h3
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9057 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -240,7 +240,7 @@
 </div>
 <!-- additional -->
 <div class="module" x-on="main">
-	<h3 id="pref-additional-title" data-text="prefs.additional.title"></h3>
+	<h3 id="pref-additional" data-text="prefs.additional.title"></h3>
 	<ul>
 		<li>
 			<input type="checkbox" id="pref-xml-load" pref="xmlLoad" />
@@ -284,7 +284,7 @@
 </div>
 <!-- StoredPrefs -->
 <div class="module" x-on="main">
-	<h3 id="pref-stored-title" data-text="prefs.storedData.title"></h3>
+	<h3 id="pref-stored" data-text="prefs.storedData.title"></h3>
 	<table>
 		<tr>
 			<td colspan="2"><button id="pref-stored-restore" data-text="button.restoreDefault"></button></td>
@@ -310,7 +310,7 @@
 </div>
 <!-- LoadSavePrefs -->
 <div class="module" x-on="main">
-	<h3 id="pref-load-save-title" data-text="prefs.loadSave.title"></h3>
+	<h3 id="pref-load-save" data-text="prefs.loadSave.title"></h3>
 	<h4 id="pref-save" data-text="prefs.loadSave.export"></h4>
 	<div>
 		<ul>
