--- a/content/popup-chrome.html
+++ b/content/popup-chrome.html
@@ -12,7 +12,7 @@ body {
 }
 
 a { text-decoration: none }
-a:hover { color: #eeeeff }
+a:hover { color: #aaaaff }
 
 
 .ui-button {
@@ -49,6 +49,8 @@ function init()
 	document.getElementById("foxtrick-toolbar-translationKeys-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.translationKeys");
 	document.getElementById("foxtrick-toolbar-options-label").textContent = BackgroundPage.Foxtrickl10n.getString("toolbar.preferences");
 	document.getElementById("foxtrick-toolbar-homepage-label").textContent = BackgroundPage.Foxtrickl10n.getString("link.homepage");
+	document.getElementById("foxtrick-toolbar-clearCache-label").textContent = BackgroundPage.Foxtrickl10n.getString("api.clearCache");
+	document.getElementById("foxtrick-toolbar-clearCache-label").title = BackgroundPage.Foxtrickl10n.getString("api.clearCache.title");
 }
 
 function toggleEnabled()
@@ -75,6 +77,13 @@ function toggleTranslationKeys()
 	window.close();
 }
 
+function clearCache()
+{
+	var BackgroundPage = chrome.extension.getBackgroundPage();
+	BackgroundPage.Foxtrick.util.api.clearCache();
+	window.close();
+}
+
 </script>
 </head>
 
@@ -95,6 +104,7 @@ function toggleTranslationKeys()
 <div id="bottomLinks">
 	<a id="foxtrick-toolbar-options-label" href="/content/preferences.html?width=600">Options</a>
 	<a id="foxtrick-toolbar-homepage-label" href="#" onclick="chrome.tabs.create({'url': 'http://code.google.com/p/foxtrick/'}); window.close();" style="padding-left:3px">Home</a>
+	<a id="foxtrick-toolbar-clearCache-label" href="#" onclick="clearCache()" style="padding-left:3px">Clear cache</a>
 </div>
 </body>
 </html>
