--- a/content/preferences.html
+++ b/content/preferences.html
@@ -401,6 +401,8 @@
 			version 2.0.</li>
 		<li>● A JavaScript implementation of the SHA-1 algorithm by
 			Paul Johnston, et al., under BSD License.</li>
+		<li>● A JavaScript implementation of the zip algorithm by
+			Dino Chiesa, under Ms-PL.</li>
 		<li>● Modified Chrome to Safari port by Michael Gundlach
 		under GPLv3 as part of adblockforchrome.googlecode.com</li>
 		<li>● Some icons from <a href="http://www.fatcow.com/free-icons">fatcow</a> 
