--- a/content/background.html
+++ b/content/background.html
@@ -115,6 +115,7 @@
 	<script type="application/x-javascript" src="./links/links-tracker.js"></script>
 	<script type="application/x-javascript" src="./links/links-training.js"></script>
 	<script type="application/x-javascript" src="./links/links-youth.js"></script>
+	<script type="application/x-javascript" src="./links/links-world.js"></script>
 	<script type="application/x-javascript" src="./matches/att-vs-def.js"></script>
 	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
 	<script type="application/x-javascript" src="./matches/htms-prediction.js"></script>
