--- a/content/background.html
+++ b/content/background.html
@@ -82,6 +82,7 @@
 	<script type="application/x-javascript" src="./information-aggregation/my-monitor.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/nt-peek.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/player-birthday.js"></script>
+	<script type="application/x-javascript" src="./information-aggregation/player-stats-experience.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/season-stats.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/series-flags.js"></script>
 	<script type="application/x-javascript" src="./information-aggregation/show-friendly-booked.js"></script>
@@ -114,6 +115,7 @@
 	<script type="application/x-javascript" src="./links/links-tracker.js"></script>
 	<script type="application/x-javascript" src="./links/links-training.js"></script>
 	<script type="application/x-javascript" src="./links/links-youth.js"></script>
+	<script type="application/x-javascript" src="./links/links-world.js"></script>
 	<script type="application/x-javascript" src="./matches/att-vs-def.js"></script>
 	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
 	<script type="application/x-javascript" src="./matches/htms-prediction.js"></script>
