Exerimental MatchReportFormat on Live pages: First commit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9363 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -118,6 +118,7 @@
 	<script type="application/x-javascript" src="./links/links-youth.js"></script>
 	<script type="application/x-javascript" src="./links/links-world.js"></script>
 	<script type="application/x-javascript" src="./matches/att-vs-def.js"></script>
+	<script type="application/x-javascript" src="./matches/live-match-report-format.js"></script>
 	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
 	<script type="application/x-javascript" src="./matches/htms-prediction.js"></script>
 	<script type="application/x-javascript" src="./matches/match-income.js"></script>
