New section: Accessibility New module: ARIA landmarks, puts role attribute on all important elements
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9571 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/background.html
+++ b/content/background.html
@@ -44,6 +44,7 @@
 	<script type="application/x-javascript" src="./ui.js"></script>
 
 	<!-- categorized modules -->
+	<script type="application/x-javascript" src="./access/aria-landmarks.js"></script>
 	<script type="application/x-javascript" src="./alert/live-alert.js"></script>
 	<script type="application/x-javascript" src="./alert/new-mail.js"></script>
 	<script type="application/x-javascript" src="./alert/ticker-alert.js"></script>
