--- a/content/preferences.html
+++ b/content/preferences.html
@@ -51,6 +51,7 @@
 	<script type="application/x-javascript" src="./add-class.js"></script>
 
 	<!-- categorized modules -->
+	<script type="application/x-javascript" src="./access/aria-landmarks.js"></script>
 	<script type="application/x-javascript" src="./alert/live-alert.js"></script>
 	<script type="application/x-javascript" src="./alert/new-mail.js"></script>
 	<script type="application/x-javascript" src="./alert/ticker-alert.js"></script>
@@ -216,6 +217,7 @@
 --><li id="tab-forum"><a data-text="tab.forum"></a></li><!--
 --><li id="tab-links"><a data-text="tab.links"></a></li><!--
 --><li id="tab-alert"><a data-text="tab.alert"></a></li><!--
+--><li id="tab-accessibility"><a data-text="tab.accessibility"></a></li><!--
 --><li id="tab-changes"><a data-text="tab.changes"></a></li><!--
 --><li id="tab-help"><a data-text="tab.help"></a></li><!--
 --><li id="tab-about"><a data-text="tab.about"></a></li>
