--- a/content/background.html
+++ b/content/background.html
@@ -121,6 +121,7 @@
 	<script type="application/x-javascript" src="./matches/att-vs-def.js"></script>
 	<script type="application/x-javascript" src="./matches/live-match-report-format.js"></script>
 	<script type="application/x-javascript" src="./matches/copy-ratings.js"></script>
+	<script type="application/x-javascript" src="./matches/htev-prediction.js"></script>
 	<script type="application/x-javascript" src="./matches/htms-prediction.js"></script>
 	<script type="application/x-javascript" src="./matches/match-income.js"></script>
 	<script type="application/x-javascript" src="./matches/match-order.js"></script>
