--- a/content/preferences.html
+++ b/content/preferences.html
@@ -144,6 +144,7 @@
 	<script type="application/x-javascript" src="./presentation/custom-medals.js"></script>
 	<script type="application/x-javascript" src="./presentation/fix-css-problems.js"></script>
 	<script type="application/x-javascript" src="./presentation/friendly-interface.js"></script>
+	<script type="application/x-javascript" src="./presentation/friendly-pool.js"></script>
 	<script type="application/x-javascript" src="./presentation/header-fix.js"></script>
 	<script type="application/x-javascript" src="./presentation/header-toggle.js"></script>
 	<script type="application/x-javascript" src="./presentation/highlight-cup-wins.js"></script>
