--- a/content/background.html
+++ b/content/background.html
@@ -24,6 +24,7 @@
 	<script type="application/x-javascript" src="./util/ht-ml.js"></script>
 	<script type="application/x-javascript" src="./util/id.js"></script>
 	<script type="application/x-javascript" src="./util/links-box.js"></script>
+	<script type="application/x-javascript" src="./util/local-store.js"></script>
 	<script type="application/x-javascript" src="./util/log.js"></script>
 	<script type="application/x-javascript" src="./util/match-view.js"></script>
 	<script type="application/x-javascript" src="./util/misc.js"></script>
