preferences.html: empty alert on top
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9812 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -198,6 +198,7 @@
 	<title>FoxTrick Preferences</title>
 </head>
 <body onload="initLoader()">
+<div id="alert" class="alert"></div>
 <h1 id="title">
 	<span data-text="prefs.title"></span>
 	<span id="version"></span>
