--- a/content/background.html
+++ b/content/background.html
@@ -34,6 +34,7 @@
 	<script type="application/x-javascript" src="./util/sanitize.js"></script>
 	<script type="application/x-javascript" src="./util/session-store.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
+	<script type="application/x-javascript" src="./util/tabs.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
 
 	<!-- core modules -->
@@ -163,6 +164,7 @@
 	<script type="application/x-javascript" src="./presentation/skill-translation.js"></script>
 	<script type="application/x-javascript" src="./presentation/skin-plugin.js"></script>
 	<script type="application/x-javascript" src="./presentation/smaller-pages.js"></script>
+	<script type="application/x-javascript" src="./presentation/tabs-test.js"></script>
 	<script type="application/x-javascript" src="./presentation/team-select-box.js"></script>
 	<script type="application/x-javascript" src="./presentation/youth-skill-hide-unknown.js"></script>
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/confirm-actions.js"></script>
