--- a/content/preferences.html
+++ b/content/preferences.html
@@ -35,6 +35,7 @@
 	<script type="application/x-javascript" src="./util/sanitize.js"></script>
 	<script type="application/x-javascript" src="./util/session-store.js"></script>
 	<script type="application/x-javascript" src="./util/string.js"></script>
+	<script type="application/x-javascript" src="./util/tabs.js"></script>
 	<script type="application/x-javascript" src="./util/time.js"></script>
 	
 	<!-- external libraries -->
@@ -170,6 +171,7 @@
 	<script type="application/x-javascript" src="./presentation/skill-translation.js"></script>
 	<script type="application/x-javascript" src="./presentation/skin-plugin.js"></script>
 	<script type="application/x-javascript" src="./presentation/smaller-pages.js"></script>
+	<script type="application/x-javascript" src="./presentation/tabs-test.js"></script>
 	<script type="application/x-javascript" src="./presentation/team-select-box.js"></script>
 	<script type="application/x-javascript" src="./presentation/youth-skill-hide-unknown.js"></script>
 	<script type="application/x-javascript" src="./shortcuts-and-tweaks/confirm-actions.js"></script>
