verion renaming (to next beta number) and beta/nightly change notes
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9836 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -355,6 +355,7 @@
 
 <!-- changes -->
 <div class="module" x-on="changes">
+	<div id="translator_note" class="alert"></div>
 	<div>
 		<input type="checkbox" id="pref-show-release-notes" pref="showReleaseNotes" />
 		<label id="pref-show-release-notes-label" for="pref-show-release-notes" data-text="releaseNotes.show"></label>
