clear cache clears local-store.js + added to prefs page
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9995 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/popup-chrome.html
+++ b/content/popup-chrome.html
@@ -80,7 +80,9 @@ function toggleTranslationKeys()
 function clearCache()
 {
 	var BackgroundPage = chrome.extension.getBackgroundPage();
-	BackgroundPage.Foxtrick.util.api.clearCache();
+	BackgroundPage.Foxtrick.sessionDeleteBranch('');
+	BackgroundPage.Foxtrick.localDeleteBranch('');
+	//BackgroundPage.Foxtrick.util.api.clearCache();
 	window.close();
 }
 
