--- a/content/popup-opera.html
+++ b/content/popup-opera.html
@@ -87,7 +87,9 @@ function openPrefs()
 function clearCache()
 {
 	var BackgroundPage = chrome.extension.getBackgroundPage();
-	BackgroundPage.Foxtrick.util.api.clearCache();
+	BackgroundPage.Foxtrick.sessionDeleteBranch('');
+	BackgroundPage.Foxtrick.localDeleteBranch('');
+	//BackgroundPage.Foxtrick.util.api.clearCache();
 	window.close();
 }
 
