--- a/content/preferences.html
+++ b/content/preferences.html
@@ -319,6 +319,10 @@
 			<td colspan="2"><button id="pref-revoke-permissions" data-text="button.revokePermissions"></button></td>
 			<td><label id="pref-revoke-permissions-label" data-text="prefs.storedData.revokePermissions"></label></td>
 		</tr>
+		<tr>
+			<td colspan="2"><button id="pref-stored-clear-cache" data-text="api.clearCache"></button></td>
+			<td><label id="pref-stored-clear-cache-label" data-text="api.clearCache.title"></label></td>
+		</tr>
 	</table>
 </div>
 <!-- LoadSavePrefs -->
