--- a/content/background.html
+++ b/content/background.html
@@ -57,7 +57,7 @@
 	<script type="application/x-javascript" src="./forum/forum-direct-page-links.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-last-post.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-next-and-previous.js"></script>
-	<script type="application/x-javascript" src="./forum/forum-mod-link-icons.js"></script>
+	<script type="application/x-javascript" src="./forum/forum-mod-popup.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-presentation.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-preview.js"></script>
 	<script type="application/x-javascript" src="./forum/forum-strip-hattrick-links.js"></script>
