trunk&0100: alt save (ballon not visible on fx android)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10080 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/preferences.html
+++ b/content/preferences.html
@@ -356,6 +356,10 @@
 		<p><button id="pref-load-do" data-text="button.import"></button></p>
 	</div>
 </div>
+<!-- alternative save button -->
+<div class="module" x-on="main">
+	<button id="save-alt" data-text="button.save"></button>
+</div>
 
 <!-- changes -->
 <div class="module" x-on="changes">
